<resources>
    <string name="app_name">Users Directory</string>
    <string name="user_details">User Details</string>
    <string name="error_retrofit">Could not get users list!</string>
    <string name="error_display">Could not create users list!</string>
    <string name="error_live">Could not get live data!</string>
    <string name="error_save">Could not save users list!</string>
    <string name="error_load">Could not load users list!</string>
    <string name="username">User Name</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="website">Website</string>
    <string name="company">Company</string>
    <string name="loading">Loading...</string>
</resources>
